--- a/thiccboisupreme.club/index.html
+++ b/thiccboisupreme.club/index.html
@@ -51,7 +51,7 @@
                         <h2><font size="2">ThiccBoiSupreme#8835</font></h2>
                         <nav>
                             <div class="e" style="background:#0;border:0px solid #0;padding:5px 10px;">
-                                <p> <a href="https://steamcommunity.com/id/configissue/" target="_blank">thiccboisupreme - </a> <a href="https://steamcommunity.com/id/deeplydepressed/" target="_blank">felgen - </a> <a href="https://steamcommunity.com/profiles/76561198802249210/" target="_blank">kylez</a></p>
+                                <p> <a href="https://steamcommunity.com/id/cokenbitches/" target="_blank">thiccboisupreme</a></p>
                             </div>
                         </nav>
                     </header>
