--- a/thiccboisupreme.club/index.html
+++ b/thiccboisupreme.club/index.html
@@ -47,8 +47,8 @@
             <div id="wrapper">
                 <div id="main">
                     <header id="header">
-                        <h1><font class="unselectable">ThiccBoiSupreme</font></h1>
-                        <h2><font size="2">ThiccBoiSupreme#8835</font></h2>
+                        <h1><font class="unselectable">HellBoyBenn</font></h1>
+                        <h2><font size="2">HellBoyBenn#9597</font></h2>
                         <nav>
                             <div class="e" style="background:#0;border:0px solid #0;padding:5px 10px;">
                                 <p> <a href="https://steamcommunity.com/id/cokenbitches/" target="_blank"> - hellboybenn - </a></p>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <script type='text/javascript'>
-            msg = "  thiccboisupreme  ";
+            msg = " h e l l   b o y   benn  ";
             msg = "⠀" + msg;
             position = 0;
 
